# agents

./: .coverage  .dockerignore  .env.example  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  Dockerfile  LAUNCH.md  LICENSE  MANIFEST.in  Makefile  README.md  SLEEP_REPORT.md  agents.py  config.yaml  demo.tape  docker-compose.yml  graph.py  install.sh  main.py  mcp_server.py  mkdocs.yml  pyproject.toml  requirements.txt  run  state.py  ui.py  watch.py  web.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-lint.yml  docs.yml  test.yml
docs/: .gitignore  index.md
evals/: BASELINE.md  checkers.py  runner.py  suite.py
examples/: README.md  job.task  page.url  review_me.py  task.txt
helpers/: __init__.py  codebase.py  config.py  delegation.py  files.py  llm.py  logging.py  memory.py  plugins.py  project.py  search.py  session.py  usage.py
nodes/: __init__.py  claude.py  codebase_agent.py  coder.py  codex.py  executor.py  fast.py  orchestrator.py  researcher.py  synthesizer.py
plugins/: translator.py
scripts/: gen_config_docs.py  sync_docs.py
tests/: conftest.py  test_agents.py  test_budget.py  test_cache.py  test_claude_fallback.py  test_cli.py  test_codebase.py  test_confidence.py  test_config.py  test_decomposition.py  test_delegation.py  test_e2e.py  test_evals.py  test_executor_repair.py  test_fanout.py  test_fuzz.py  test_mcp_server.py  test_plugins.py  test_retry.py  test_routing.py  test_search.py  test_streaming.py  test_synthesizer.py  test_traces.py  test_watcher.py  test_web.py
web/: app.py
web/templates/: base.html  graph.html  health.html  history.html  index.html  login.html  models.html  run_detail.html  runs.html  stats.html
