[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agents"
version = "0.1.0"
description = "Multi-agent AI orchestration system — LangGraph + LiteLLM + Ollama"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Vishwas Vijayabaskar"}]

dependencies = [
    "langgraph>=1.1",
    "litellm>=1.80",
    "rich>=13.0",
    "chromadb>=1.0",
    "sentence-transformers>=5.0",
    "ddgs>=9.0",
    "python-dotenv>=1.0",
    "anthropic>=0.50",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "mcp>=1.27",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.14"]

[project.scripts]
agents = "main:repl"
agents-web = "web.app:main"

[tool.setuptools]
packages = ["helpers", "nodes", "web", "plugins"]
py-modules = ["main", "graph", "state", "ui", "mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
