[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agents"
version = "0.1.0"
description = "Multi-agent AI orchestration system — LangGraph + LiteLLM + Ollama"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Vishwas Vijayabaskar"}]

dependencies = [
    "langgraph>=1.1",
    "litellm>=1.80",
    "rich>=13.0",
    "chromadb>=1.0",
    "sentence-transformers>=5.0",
    "ddgs>=9.0",
    "python-dotenv>=1.0",
    "anthropic>=0.50",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "mcp>=1.27",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "watchdog>=4.0",
    "itsdangerous>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.14", "pytest-cov>=5.0", "ruff>=0.6", "mypy>=1.8"]

[project.scripts]
agents = "main:repl"
agents-web = "web.app:main"

[tool.setuptools]
packages = ["helpers", "nodes", "web", "plugins", "evals"]
py-modules = ["main", "graph", "state", "ui", "mcp_server", "watch"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["helpers", "nodes", "main", "graph", "state", "watch", "mcp_server"]
omit = [
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "except ImportError",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
implicit_optional = true
# Pragmatic: catch real bugs, don't demand full annotation coverage
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = false
exclude = ["chroma", "output", "sessions", "examples", "tests", "evals/results", "build", "dist"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["chroma", "output", "sessions", "__pycache__", ".venv", "evals/results", "examples"]

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = isort, UP = pyupgrade, B = bugbear
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",  # line length handled by formatter, not enforced hard
    "E402",  # module-level import not at top (main.py suppresses warnings before imports)
    "B008",  # function call in default arg (FastAPI Depends/Form pattern)
    "UP035", # deprecated typing imports — keep for older runtime compat
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811", "E731"]  # fixtures, re-imports, inline lambdas common in tests
"__init__.py" = ["F401"]              # re-export modules deliberately import for namespace
